Do not modify input packetChain in Ipv4Decoder
The input should be expected to be immutable, make sure we copy it
accordingly.

Change-Id: Idb78444845dd5636dda15fe644e24e1bf742f1ed
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>